2020-01-26  6.9.10-89 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-89, GIT revision 15...

2020-01-20  6.9.10-89 Cristy  <quetzlzacatenango@image...>
  * Make png creation reproducible (reference
    https://github.com/ImageMagick/ImageMagick/pull/1270).

2020-01-25  6.9.10-88 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-88, GIT revision 15309:a3d1b6f:20200125

2020-01-20  6.9.10-88 Cristy  <quetzlzacatenango@image...>
  * Support 32-bit tiles TIFF images.
  * New -connected-component options (reference
    https://legacy.imagemagick.org/script/connected-components.php).

2020-01-18  6.9.10-87 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-87, GIT revision 15285:f6ba467:20200118

2020-01-12  6.9.10-87 Cristy  <quetzlzacatenango@image...>
  * Conditional compile for huge xml pages for RSVG delegate library.
  * Put "width" property in the PNG namespace (reference
    https://github.com/ImageMagick/ImageMagick/issues/1833).
 * -combine -colorspace sRGB no longer returns grayscale output (reference
    https://github.com/ImageMagick/ImageMagick/issues/1835).

2020-01-12  6.9.10-86 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-86, GIT revision 15260:0667659:20200112.

2020-01-12  6.9.10-86 Cristy  <quetzlzacatenango@image...>
  * Fixed three failing Magick.NET unit tests.

2020-01-11  6.9.10-85 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-85, GIT revision 15253:1fdc999:20200111.

2020-01-11  6.9.10-85 Dirk Lemstra <dirk@lem.....org>
  * Also support svg:xml-parse-huge when using librsvg.

2020-01-07  6.9.10-85 Cristy  <quetzlzacatenango@image...>
  * Support Fx do() iterator.
  * `magick -size 100x100 xc:black black.pnm` no longer creates a white image
    (reference https://github.com/ImageMagick/ImageMagick/issues/1817).
  * setjmp/longjmp in jpeg.c no longer trigger undefind behavior (reference