@@ -4,6 +4,7 @@
 2020-01-20  6.9.10-89 Cristy  <quetzlzacatenango@image...>
   * Make png creation reproducible (reference
     https://github.com/ImageMagick/ImageMagick/pull/1270).
+  * Refactor uninitialize variable for -fx "while(,)" expression.
 
 2020-01-25  6.9.10-88 Cristy  <quetzlzacatenango@image...>
   * Release ImageMagick version 6.9.10-88, GIT revision 15309:a3d1b6f:20200125
